Add pagination and filtering for lists api
