# src/docs/swagger.json
@@ -26,7 +26,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/dtos.CreateUpdateCountryRequest"
+                            "$ref": "#/definitions/golang-web-api_api_dtos.CreateUpdateCountryRequest"
                         }
                     }
                 ],
@@ -36,13 +36,13 @@
                         "schema": {
                             "allOf": [
                                 {
-                                    "$ref": "#/definitions/helper.BaseHttpResponse"
+                                    "$ref": "#/definitions/golang-web-api_api_helper.BaseHttpResponse"
                                 },
                                 {
                                     "type": "object",
                                     "properties": {
                                         "result": {
-                                            "$ref": "#/definitions/dtos.CountryResponse"
+                                            "$ref": "#/definitions/golang-web-api_api_dtos.CountryResponse"
                                         }
                                     }
                                 }
@@ -52,7 +52,61 @@
                     "400": {
                         "description": "Bad request",
                         "schema": {
-                            "$ref": "#/definitions/helper.BaseHttpResponse"
+                            "$ref": "#/definitions/golang-web-api_api_helper.BaseHttpResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/v1/countries/get-by-filter": {
+            "post": {
+                "security": [
+                    {
+                        "AuthBearer": []
+                    }
+                ],
+                "description": "Get Countries",
+                "consumes": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Countries"
+                ],
+                "summary": "Get Countries",
+                "parameters": [
+                    {
+                        "description": "Request",
+                        "name": "Request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/golang-web-api_api_dtos.PaginationInputWithFilter"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Country response",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/golang-web-api_api_helper.BaseHttpResponse"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "result": {
+                                            "$ref": "#/definitions/golang-web-api_api_dtos.PagedList-golang-web-api_api_dtos_CountryResponse"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    },
+                    "400": {
+                        "description": "Bad request",
+                        "schema": {
+                            "$ref": "#/definitions/golang-web-api_api_helper.BaseHttpResponse"
                         }
                     }
                 }
@@ -88,13 +142,13 @@
                         "schema": {
                             "allOf": [
                                 {
-                                    "$ref": "#/definitions/helper.BaseHttpResponse"
+                                    "$ref": "#/definitions/golang-web-api_api_helper.BaseHttpResponse"
                                 },
                                 {
                                     "type": "object",
                                     "properties": {
                                         "result": {
-                                            "$ref": "#/definitions/dtos.CountryResponse"
+                                            "$ref": "#/definitions/golang-web-api_api_dtos.CountryResponse"
                                         }
                                     }
                                 }
@@ -104,7 +158,7 @@
                     "400": {
                         "description": "Bad request",
                         "schema": {
-                            "$ref": "#/definitions/helper.BaseHttpResponse"
+                            "$ref": "#/definitions/golang-web-api_api_helper.BaseHttpResponse"
                         }
                     }
                 }
@@ -137,7 +191,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/dtos.CreateUpdateCountryRequest"
+                            "$ref": "#/definitions/golang-web-api_api_dtos.CreateUpdateCountryRequest"
                         }
                     }
                 ],
@@ -147,13 +201,13 @@
                         "schema": {
                             "allOf": [
                                 {
-                                    "$ref": "#/definitions/helper.BaseHttpResponse"
+                                    "$ref": "#/definitions/golang-web-api_api_helper.BaseHttpResponse"
                                 },
                                 {
                                     "type": "object",
                                     "properties": {
                                         "result": {
-                                            "$ref": "#/definitions/dtos.CountryResponse"
+                                            "$ref": "#/definitions/golang-web-api_api_dtos.CountryResponse"
                                         }
                                     }
                                 }
@@ -163,7 +217,7 @@
                     "400": {
                         "description": "Bad request",
                         "schema": {
-                            "$ref": "#/definitions/helper.BaseHttpResponse"
+                            "$ref": "#/definitions/golang-web-api_api_helper.BaseHttpResponse"
                         }
                     }
                 }
@@ -195,13 +249,13 @@
                     "200": {
                         "description": "response",
                         "schema": {
-                            "$ref": "#/definitions/helper.BaseHttpResponse"
+                            "$ref": "#/definitions/golang-web-api_api_helper.BaseHttpResponse"
                         }
                     },
                     "400": {
                         "description": "Bad request",
                         "schema": {
-                            "$ref": "#/definitions/helper.BaseHttpResponse"
+                            "$ref": "#/definitions/golang-web-api_api_helper.BaseHttpResponse"
                         }
                     }
                 }
@@ -224,13 +278,13 @@
                     "200": {
                         "description": "Success",
                         "schema": {
-                            "$ref": "#/definitions/helper.BaseHttpResponse"
+                            "$ref": "#/definitions/golang-web-api_api_helper.BaseHttpResponse"
                         }
                     },
                     "400": {
                         "description": "Failed",
                         "schema": {
-                            "$ref": "#/definitions/helper.BaseHttpResponse"
+                            "$ref": "#/definitions/golang-web-api_api_helper.BaseHttpResponse"
                         }
                     }
                 }
@@ -256,7 +310,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/dtos.RegisterLoginByMobileRequest"
+                            "$ref": "#/definitions/golang-web-api_api_dtos.RegisterLoginByMobileRequest"
                         }
                     }
                 ],
@@ -264,19 +318,19 @@
                     "201": {
                         "description": "Success",
                         "schema": {
-                            "$ref": "#/definitions/helper.BaseHttpResponse"
+                            "$ref": "#/definitions/golang-web-api_api_helper.BaseHttpResponse"
                         }
                     },
                     "400": {
                         "description": "Failed",
                         "schema": {
-                            "$ref": "#/definitions/helper.BaseHttpResponse"
+                            "$ref": "#/definitions/golang-web-api_api_helper.BaseHttpResponse"
                         }
                     },
                     "409": {
                         "description": "Failed",
                         "schema": {
-                            "$ref": "#/definitions/helper.BaseHttpResponse"
+                            "$ref": "#/definitions/golang-web-api_api_helper.BaseHttpResponse"
                         }
                     }
                 }
@@ -302,7 +356,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/dtos.RefreshToken"
+                            "$ref": "#/definitions/golang-web-api_api_dtos.RefreshToken"
                         }
                     }
                 ],
@@ -310,19 +364,19 @@
                     "201": {
                         "description": "Success",
                         "schema": {
-                            "$ref": "#/definitions/helper.BaseHttpResponse"
+                            "$ref": "#/definitions/golang-web-api_api_helper.BaseHttpResponse"
                         }
                     },
                     "400": {
                         "description": "Failed",
                         "schema": {
-                            "$ref": "#/definitions/helper.BaseHttpResponse"
+                            "$ref": "#/definitions/golang-web-api_api_helper.BaseHttpResponse"
                         }
                     },
                     "409": {
                         "description": "Failed",
                         "schema": {
-                            "$ref": "#/definitions/helper.BaseHttpResponse"
+                            "$ref": "#/definitions/golang-web-api_api_helper.BaseHttpResponse"
                         }
                     }
                 }
@@ -348,7 +402,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/dtos.GetOtpRequest"
+                            "$ref": "#/definitions/golang-web-api_api_dtos.GetOtpRequest"
                         }
                     }
                 ],
@@ -356,19 +410,19 @@
                     "201": {
                         "description": "Success",
                         "schema": {
-                            "$ref": "#/definitions/helper.BaseHttpResponse"
+                            "$ref": "#/definitions/golang-web-api_api_helper.BaseHttpResponse"
                         }
                     },
                     "400": {
                         "description": "Failed",
                         "schema": {
-                            "$ref": "#/definitions/helper.BaseHttpResponse"
+                            "$ref": "#/definitions/golang-web-api_api_helper.BaseHttpResponse"
                         }
                     },
                     "409": {
                         "description": "Failed",
                         "schema": {
-                            "$ref": "#/definitions/helper.BaseHttpResponse"
+                            "$ref": "#/definitions/golang-web-api_api_helper.BaseHttpResponse"
                         }
                     }
                 }
@@ -376,7 +430,7 @@
         }
     },
     "definitions": {
-        "dtos.CountryResponse": {
+        "golang-web-api_api_dtos.CountryResponse": {
             "type": "object",
             "properties": {
                 "id": {
@@ -387,7 +441,7 @@
                 }
             }
         },
-        "dtos.CreateUpdateCountryRequest": {
+        "golang-web-api_api_dtos.CreateUpdateCountryRequest": {
             "type": "object",
             "required": [
                 "name"
@@ -400,7 +454,26 @@
                 }
             }
         },
-        "dtos.GetOtpRequest": {
+        "golang-web-api_api_dtos.Filter": {
+            "type": "object",
+            "properties": {
+                "filterType": {
+                    "description": "text number",
+                    "type": "string"
+                },
+                "from": {
+                    "type": "string"
+                },
+                "to": {
+                    "type": "string"
+                },
+                "type": {
+                    "description": "contains notContains equals notEqual startsWith lessThan lessThanOrEqual greaterThan greaterThanOrEqual inRange endsWith",
+                    "type": "string"
+                }
+            }
+        },
+        "golang-web-api_api_dtos.GetOtpRequest": {
             "type": "object",
             "required": [
                 "mobileNumber"
@@ -413,7 +486,56 @@
                 }
             }
         },
-        "dtos.RefreshToken": {
+        "golang-web-api_api_dtos.PagedList-golang-web-api_api_dtos_CountryResponse": {
+            "type": "object",
+            "properties": {
+                "hasNextPage": {
+                    "type": "boolean"
+                },
+                "hasPreviousPage": {
+                    "type": "boolean"
+                },
+                "items": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/golang-web-api_api_dtos.CountryResponse"
+                    }
+                },
+                "pageNumber": {
+                    "type": "integer"
+                },
+                "totalPages": {
+                    "type": "integer"
+                },
+                "totalRows": {
+                    "type": "integer"
+                }
+            }
+        },
+        "golang-web-api_api_dtos.PaginationInputWithFilter": {
+            "type": "object",
+            "properties": {
+                "filter": {
+                    "type": "object",
+                    "additionalProperties": {
+                        "$ref": "#/definitions/golang-web-api_api_dtos.Filter"
+                    }
+                },
+                "pageNumber": {
+                    "type": "integer"
+                },
+                "pageSize": {
+                    "type": "integer"
+                },
+                "sort": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/golang-web-api_api_dtos.Sort"
+                    }
+                }
+            }
+        },
+        "golang-web-api_api_dtos.RefreshToken": {
             "type": "object",
             "required": [
                 "refreshToken"
@@ -424,7 +546,7 @@
                 }
             }
         },
-        "dtos.RegisterLoginByMobileRequest": {
+        "golang-web-api_api_dtos.RegisterLoginByMobileRequest": {
             "type": "object",
             "required": [
                 "mobileNumber",
@@ -443,7 +565,18 @@
                 }
             }
         },
-        "helper.BaseHttpResponse": {
+        "golang-web-api_api_dtos.Sort": {
+            "type": "object",
+            "properties": {
+                "colId": {
+                    "type": "string"
+                },
+                "sort": {
+                    "type": "string"
+                }
+            }
+        },
+        "golang-web-api_api_helper.BaseHttpResponse": {
             "type": "object",
             "properties": {
                 "error": {},
@@ -457,12 +590,12 @@
                 "validationErrors": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/helper.ValidationError"
+                        "$ref": "#/definitions/golang-web-api_api_helper.ValidationError"
                     }
                 }
             }
         },
-        "helper.ValidationError": {
+        "golang-web-api_api_helper.ValidationError": {
             "type": "object",
             "properties": {
                 "message": {
